// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserList /> Should render and match the snapshot - admin 1`] = `
<div>
  <div
    class="Box-sc-14m3exe-0 fVEMbn"
    display="flex"
    height="100%"
    overflow="scroll"
  >
    <div
      class="Box-sc-14m3exe-0 dtkvkk"
      width="100%"
    >
      <div
        class="Box-sc-14m3exe-0 jsQLkQ"
        display="flex"
      >
        <h1
          class="H1-tncdg6-0 ihzbQx"
        >
          <span>
            Manage accounts
          </span>
        </h1>
        <button
          class="StyledTextButton-sc-17cmh3t-0 bwXrsr"
          color="#C866EA"
          font-weight="bold"
        >
          <span>
            + Invite researcher
          </span>
        </button>
      </div>
      <div>
        <div
          class="Box-sc-14m3exe-0 cEVOdo"
          display="flex"
        >
          <div
            class="Box-sc-14m3exe-0 bygSYt"
            display="flex"
          >
            <div
              class="Box-sc-14m3exe-0 hyFUUf"
              display="inline-block"
              width="100%"
            >
              <div
                class="Box-sc-14m3exe-0 bygSYt"
                display="flex"
              >
                <div
                  class="Box-sc-14m3exe-0 kapyPP"
                  display="inline-flex"
                  width="120px"
                >
                  <p
                    class="Text-sc-2lza2m-0 kVrtVZ"
                    color="#FFFFFF"
                    font-size="14"
                    font-weight="bold"
                  >
                    Participant
                  </p>
                </div>
                <div
                  class="Box-sc-14m3exe-0 ewtKZW"
                  display="inline-flex"
                  width="120px"
                >
                  <p
                    class="Text-sc-2lza2m-0 kVrtVZ"
                    color="#FFFFFF"
                    font-size="14"
                    font-weight="bold"
                  >
                    Researcher
                  </p>
                </div>
                <div
                  class="Box-sc-14m3exe-0 fzsZJK"
                  width="25"
                />
                <div
                  class="Box-sc-14m3exe-0 ctokGG"
                  cursor="pointer"
                  display="inline-flex"
                >
                  <img
                    class="Img-sc-1kfzr96-0 cfhMhJ"
                    src="IMAGE_MOCK"
                  />
                  <span>
                    Show inactive accounts
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="styled__SearchInputStyled-sc-65e6t4-3 iSsPYa"
          >
            <input
              class="Input-sc-19txxuq-0 kVPrzG"
              type="text"
              value=""
            />
            <img
              alt="search"
              class="styled__SearchIcon-sc-65e6t4-4 jtkbOJ"
              src="IMAGE_MOCK"
            />
            
          </div>
        </div>
        <div
          class="styled__TableLoadingContainer-x75ncs-0 cXAbyN"
        >
          <table
            class="Table-jgz9dg-0 dyJvpl"
            width="100%"
          >
            <thead
              class="THead-sc-1pp8kl6-0"
            >
              <tr
                class="TR-ufkqc8-0 StripedTR-sc-185jv5k-0 egSFtD iGeZEY"
              >
                <th
                  class="TH-sc-1qq1mcj-0 fjoWjG"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="Column-sc-1n6divy-0 hleKja"
                  >
                    Name
                  </div>
                </th>
                <th
                  class="TH-sc-1qq1mcj-0 fjoWjG"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="Column-sc-1n6divy-0 hleKja"
                  >
                    Email
                  </div>
                </th>
                <th
                  class="TH-sc-1qq1mcj-0 fjoWjG"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="Column-sc-1n6divy-0 hleKja"
                  >
                    Role
                  </div>
                </th>
                <th
                  class="TH-sc-1qq1mcj-0 fjoWjG"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="Column-sc-1n6divy-0 hleKja"
                  >
                     
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="TBody-sc-1332v38-0"
            >
              <tr
                class="TR-ufkqc8-0 StripedTR-sc-185jv5k-0 egSFtD cPliIm"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  <p
                    class="Text-sc-2lza2m-0 llwciq"
                    color="#EF462F"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  test@test.pl
                </td>
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  <div
                    class="Box-sc-14m3exe-0 dNmAns"
                    display="inline-flex"
                    width="120px"
                  >
                    <p
                      class="Text-sc-2lza2m-0 kVrtVZ"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Participant
                    </p>
                  </div>
                </td>
                <td
                  class="TD-sc-4t6406-0 bUpcjC"
                >
                  <div
                    class="Row-x1o3ru-0 hEhKQX"
                    width="100%"
                  >
                    <button
                      class="StyledTextButton-sc-17cmh3t-0 dflcVA"
                    >
                      <p
                        class="Text-sc-2lza2m-0 iKfWPK"
                        color="#EF462F"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                class="TR-ufkqc8-0 StripedTR-sc-185jv5k-0 egSFtD cPliIm"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  <p
                    class="Text-sc-2lza2m-0 llwciq"
                    color="#EF462F"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  test2@test.pl
                </td>
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  <div
                    class="Box-sc-14m3exe-0 exJtcV"
                    display="inline-flex"
                    width="120px"
                  >
                    <p
                      class="Text-sc-2lza2m-0 kVrtVZ"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Researcher
                    </p>
                  </div>
                </td>
                <td
                  class="TD-sc-4t6406-0 bUpcjC"
                >
                  <div
                    class="Row-x1o3ru-0 hEhKQX"
                    width="100%"
                  >
                    <button
                      class="StyledTextButton-sc-17cmh3t-0 dflcVA"
                    >
                      <p
                        class="Text-sc-2lza2m-0 iKfWPK"
                        color="#EF462F"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                class="TR-ufkqc8-0 StripedTR-sc-185jv5k-0 egSFtD cPliIm"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  <p
                    class="Text-sc-2lza2m-0 llwciq"
                    color="#EF462F"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  test3@test.pl
                </td>
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  <div
                    class="Box-sc-14m3exe-0 kgfiHB"
                    display="inline-flex"
                    width="120px"
                  >
                    <p
                      class="Text-sc-2lza2m-0 kVrtVZ"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Admin
                    </p>
                  </div>
                </td>
                <td
                  class="TD-sc-4t6406-0 bUpcjC"
                >
                  <div
                    class="Row-x1o3ru-0 hEhKQX"
                    width="100%"
                  >
                    <button
                      class="StyledTextButton-sc-17cmh3t-0 dflcVA"
                    >
                      <p
                        class="Text-sc-2lza2m-0 iKfWPK"
                        color="#EF462F"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="Row-x1o3ru-0 iKdysT"
          display="flex"
          width="100%"
        >
          <div
            class="Box-sc-14m3exe-0 JuxSZ"
            cursor="pointer"
            display="flex"
          >
            <p
              class="Text-sc-2lza2m-0 esBmYO"
              color="#FFFFFF"
            >
              1
            </p>
          </div>
          <h1
            class="H1-tncdg6-0 hvewsC"
            cursor="pointer"
          >
            &gt;
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<UserList /> Should render and match the snapshot - researcher 1`] = `
<div>
  <div
    class="Box-sc-14m3exe-0 fVEMbn"
    display="flex"
    height="100%"
    overflow="scroll"
  >
    <div
      class="Box-sc-14m3exe-0 dtkvkk"
      width="100%"
    >
      <div
        class="Box-sc-14m3exe-0 jsQLkQ"
        display="flex"
      >
        <h1
          class="H1-tncdg6-0 ihzbQx"
        >
          <span>
            Manage accounts
          </span>
        </h1>
      </div>
      <div>
        <div
          class="Box-sc-14m3exe-0 cEVOdo"
          display="flex"
        >
          <div
            class="Box-sc-14m3exe-0 bygSYt"
            display="flex"
          >
            <div
              class="Box-sc-14m3exe-0 hyFUUf"
              display="inline-block"
              width="100%"
            >
              <div
                class="Box-sc-14m3exe-0 bygSYt"
                display="flex"
              >
                <div
                  class="Box-sc-14m3exe-0 kapyPP"
                  display="inline-flex"
                  width="120px"
                >
                  <p
                    class="Text-sc-2lza2m-0 kVrtVZ"
                    color="#FFFFFF"
                    font-size="14"
                    font-weight="bold"
                  >
                    Participant
                  </p>
                </div>
                <div
                  class="Box-sc-14m3exe-0 ewtKZW"
                  display="inline-flex"
                  width="120px"
                >
                  <p
                    class="Text-sc-2lza2m-0 kVrtVZ"
                    color="#FFFFFF"
                    font-size="14"
                    font-weight="bold"
                  >
                    Researcher
                  </p>
                </div>
                <div
                  class="Box-sc-14m3exe-0 fzsZJK"
                  width="25"
                />
                <div
                  class="Box-sc-14m3exe-0 ctokGG"
                  cursor="pointer"
                  display="inline-flex"
                >
                  <img
                    class="Img-sc-1kfzr96-0 cfhMhJ"
                    src="IMAGE_MOCK"
                  />
                  <span>
                    Show inactive accounts
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="styled__SearchInputStyled-sc-65e6t4-3 iSsPYa"
          >
            <input
              class="Input-sc-19txxuq-0 kVPrzG"
              type="text"
              value=""
            />
            <img
              alt="search"
              class="styled__SearchIcon-sc-65e6t4-4 jtkbOJ"
              src="IMAGE_MOCK"
            />
            
          </div>
        </div>
        <div
          class="styled__TableLoadingContainer-x75ncs-0 cXAbyN"
        >
          <table
            class="Table-jgz9dg-0 dyJvpl"
            width="100%"
          >
            <thead
              class="THead-sc-1pp8kl6-0"
            >
              <tr
                class="TR-ufkqc8-0 StripedTR-sc-185jv5k-0 egSFtD iGeZEY"
              >
                <th
                  class="TH-sc-1qq1mcj-0 fjoWjG"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="Column-sc-1n6divy-0 hleKja"
                  >
                    Name
                  </div>
                </th>
                <th
                  class="TH-sc-1qq1mcj-0 fjoWjG"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="Column-sc-1n6divy-0 hleKja"
                  >
                    Email
                  </div>
                </th>
                <th
                  class="TH-sc-1qq1mcj-0 fjoWjG"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="Column-sc-1n6divy-0 hleKja"
                  >
                    Role
                  </div>
                </th>
                <th
                  class="TH-sc-1qq1mcj-0 fjoWjG"
                  color="#2F3850"
                  opacity="0.6"
                  scope="col"
                  width="auto"
                >
                  <div
                    class="Column-sc-1n6divy-0 hleKja"
                  >
                     
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="TBody-sc-1332v38-0"
            >
              <tr
                class="TR-ufkqc8-0 StripedTR-sc-185jv5k-0 egSFtD cPliIm"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  <p
                    class="Text-sc-2lza2m-0 llwciq"
                    color="#EF462F"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  test@test.pl
                </td>
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  <div
                    class="Box-sc-14m3exe-0 dNmAns"
                    display="inline-flex"
                    width="120px"
                  >
                    <p
                      class="Text-sc-2lza2m-0 kVrtVZ"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Participant
                    </p>
                  </div>
                </td>
                <td
                  class="TD-sc-4t6406-0 bUpcjC"
                >
                  <div
                    class="Row-x1o3ru-0 hEhKQX"
                    width="100%"
                  >
                    <button
                      class="StyledTextButton-sc-17cmh3t-0 dflcVA"
                    >
                      <p
                        class="Text-sc-2lza2m-0 iKfWPK"
                        color="#EF462F"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                class="TR-ufkqc8-0 StripedTR-sc-185jv5k-0 egSFtD cPliIm"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  <p
                    class="Text-sc-2lza2m-0 llwciq"
                    color="#EF462F"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  test2@test.pl
                </td>
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  <div
                    class="Box-sc-14m3exe-0 exJtcV"
                    display="inline-flex"
                    width="120px"
                  >
                    <p
                      class="Text-sc-2lza2m-0 kVrtVZ"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Researcher
                    </p>
                  </div>
                </td>
                <td
                  class="TD-sc-4t6406-0 bUpcjC"
                >
                  <div
                    class="Row-x1o3ru-0 hEhKQX"
                    width="100%"
                  >
                    <button
                      class="StyledTextButton-sc-17cmh3t-0 dflcVA"
                    >
                      <p
                        class="Text-sc-2lza2m-0 iKfWPK"
                        color="#EF462F"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                class="TR-ufkqc8-0 StripedTR-sc-185jv5k-0 egSFtD cPliIm"
                color="#FFFFFF"
                cursor="pointer"
              >
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  <p
                    class="Text-sc-2lza2m-0 llwciq"
                    color="#EF462F"
                  >
                    Waiting for activation
                  </p>
                </td>
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  test3@test.pl
                </td>
                <td
                  class="TD-sc-4t6406-0 dmlVAK"
                >
                  <div
                    class="Box-sc-14m3exe-0 kgfiHB"
                    display="inline-flex"
                    width="120px"
                  >
                    <p
                      class="Text-sc-2lza2m-0 kVrtVZ"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Admin
                    </p>
                  </div>
                </td>
                <td
                  class="TD-sc-4t6406-0 bUpcjC"
                >
                  <div
                    class="Row-x1o3ru-0 hEhKQX"
                    width="100%"
                  >
                    <button
                      class="StyledTextButton-sc-17cmh3t-0 dflcVA"
                    >
                      <p
                        class="Text-sc-2lza2m-0 iKfWPK"
                        color="#EF462F"
                        font-weight="bold"
                      >
                        Deactivate account
                      </p>
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="Row-x1o3ru-0 iKdysT"
          display="flex"
          width="100%"
        >
          <div
            class="Box-sc-14m3exe-0 JuxSZ"
            cursor="pointer"
            display="flex"
          >
            <p
              class="Text-sc-2lza2m-0 esBmYO"
              color="#FFFFFF"
            >
              1
            </p>
          </div>
          <h1
            class="H1-tncdg6-0 hvewsC"
            cursor="pointer"
          >
            &gt;
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;
